update with shell generation script only

--- a/BM_model_shells.ipynb
+++ b/BM_model_shells.ipynb
@@ -14,11 +14,11 @@
    "id": "c144191e-daba-4c03-a1be-f827d051b054",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:29.020992Z",
-     "iopub.status.busy": "2024-10-07T21:50:29.019078Z",
-     "iopub.status.idle": "2024-10-07T21:50:29.536665Z",
-     "shell.execute_reply": "2024-10-07T21:50:29.535932Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:29.020992Z"
+     "iopub.execute_input": "2024-10-10T18:13:43.754745Z",
+     "iopub.status.busy": "2024-10-10T18:13:43.754499Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.300393Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.300393Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:43.754745Z"
     }
    },
    "outputs": [],
@@ -41,11 +41,11 @@
    "id": "88aa81bc-b9b5-4b62-b517-b2475954c389",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:29.652296Z",
-     "iopub.status.busy": "2024-10-07T21:50:29.651288Z",
-     "iopub.status.idle": "2024-10-07T21:50:29.660288Z",
-     "shell.execute_reply": "2024-10-07T21:50:29.659736Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:29.652296Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.304403Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.300393Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.308995Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.308853Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.304403Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
    "id": "323ac78b-8bba-41a8-8a69-ec4d4cc1e60f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:30.755138Z",
-     "iopub.status.busy": "2024-10-07T21:50:30.755050Z",
-     "iopub.status.idle": "2024-10-07T21:50:30.766834Z",
-     "shell.execute_reply": "2024-10-07T21:50:30.765842Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:30.755138Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.312254Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.312138Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.325524Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.324305Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.312254Z"
     }
    },
    "outputs": [],
@@ -102,11 +102,11 @@
    "id": "65a7396b-01d3-410a-9800-fdc40f067f00",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:32.251102Z",
-     "iopub.status.busy": "2024-10-07T21:50:32.251102Z",
-     "iopub.status.idle": "2024-10-07T21:50:32.257711Z",
-     "shell.execute_reply": "2024-10-07T21:50:32.256914Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:32.251102Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.326750Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.326750Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.337415Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.337415Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.326750Z"
     }
    },
    "outputs": [],
@@ -150,11 +150,11 @@
    "id": "db60f7e1-b35a-46c3-b392-4b949136b043",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:33.915409Z",
-     "iopub.status.busy": "2024-10-07T21:50:33.915409Z",
-     "iopub.status.idle": "2024-10-07T21:50:33.924342Z",
-     "shell.execute_reply": "2024-10-07T21:50:33.924114Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:33.915409Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.382305Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.382305Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.391064Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.390265Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.382305Z"
     }
    },
    "outputs": [],
@@ -225,11 +225,11 @@
    "id": "eb6429de-1733-4f85-9369-222ea9d9ab7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:35.395406Z",
-     "iopub.status.busy": "2024-10-07T21:50:35.395406Z",
-     "iopub.status.idle": "2024-10-07T21:50:35.403709Z",
-     "shell.execute_reply": "2024-10-07T21:50:35.403330Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:35.395406Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.581352Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.581352Z",
+     "iopub.status.idle": "2024-10-10T18:13:44.591466Z",
+     "shell.execute_reply": "2024-10-10T18:13:44.590976Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.581352Z"
     }
    },
    "outputs": [],
@@ -276,11 +276,11 @@
    "id": "9d6c44d1-9390-4b32-9253-effc28f60737",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:36.108169Z",
-     "iopub.status.busy": "2024-10-07T21:50:36.108169Z",
-     "iopub.status.idle": "2024-10-07T21:50:36.187107Z",
-     "shell.execute_reply": "2024-10-07T21:50:36.187107Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:36.108169Z"
+     "iopub.execute_input": "2024-10-10T18:13:44.964317Z",
+     "iopub.status.busy": "2024-10-10T18:13:44.963305Z",
+     "iopub.status.idle": "2024-10-10T18:13:45.042249Z",
+     "shell.execute_reply": "2024-10-10T18:13:45.041722Z",
+     "shell.execute_reply.started": "2024-10-10T18:13:44.964317Z"
     }
    },
    "outputs": [],
@@ -314,14 +314,32 @@
     "search_b(2 * (num_shells - 1), cutoff, q_b, prev_id, curr_id)\n",
     "\n",
     "# Generate a new curr_id for the next site we will search\n",
-    "while curr_id in visited_list:\n",
-    "    curr_id += 1\n",
-    "search_tr(2 * (num_shells - 1), cutoff, q_tr, prev_id, curr_id)\n",
+    "# while curr_id in visited_list:\n",
+    "#     curr_id += 1\n",
+    "# search_tr(2 * (num_shells - 1), cutoff, q_tr, prev_id, curr_id)\n",
     "\n",
-    "# Generate a new curr_id for the next site we will search\n",
-    "while curr_id in visited_list:\n",
-    "    curr_id += 1\n",
-    "search_tl(2 * (num_shells - 1), cutoff, q_tl, prev_id, curr_id)"
+    "# # Generate a new curr_id for the next site we will search\n",
+    "# while curr_id in visited_list:\n",
+    "#     curr_id += 1\n",
+    "# search_tl(2 * (num_shells - 1), cutoff, q_tl, prev_id, curr_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "00d80fa5-a9c9-4f6c-ad0e-fe59b81b8ea9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-10-10T18:32:42.151063Z",
+     "iopub.status.busy": "2024-10-10T18:32:42.151063Z",
+     "iopub.status.idle": "2024-10-10T18:32:42.164411Z",
+     "shell.execute_reply": "2024-10-10T18:32:42.164027Z",
+     "shell.execute_reply.started": "2024-10-10T18:32:42.151063Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# layer_dict"
    ]
   },
   {
@@ -334,25 +352,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "2ab9f643-2c8c-4698-9c6c-973fb29a5f57",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-07T21:50:36.964929Z",
-     "iopub.status.busy": "2024-10-07T21:50:36.963925Z",
-     "iopub.status.idle": "2024-10-07T21:50:37.113870Z",
-     "shell.execute_reply": "2024-10-07T21:50:37.113870Z",
-     "shell.execute_reply.started": "2024-10-07T21:50:36.964929Z"
+     "iopub.execute_input": "2024-10-10T18:21:18.414523Z",
+     "iopub.status.busy": "2024-10-10T18:21:18.413524Z",
+     "iopub.status.idle": "2024-10-10T18:21:18.569516Z",
+     "shell.execute_reply": "2024-10-10T18:21:18.568353Z",
+     "shell.execute_reply.started": "2024-10-10T18:21:18.414523Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x242aee02550>"
+       "<matplotlib.collections.PathCollection at 0x16ca225adf0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
